@@ -1,3 +1,12 @@
+2005-10-12  Vincent Noel <vnoel@cox.net>
+
+	* Makefile.am:
+	* log_repaint.c:
+	* logview.c: (CreateMainWin):
+	* logview.h: Remove some useless items from the LogviewWindow
+	structure. Remove the zoom.[ch] files from the build (they have
+	not been used in a while).
+
 2005-10-12  Vincent Noel  <vnoel@cox.net>
 
 	* log_repaint.c: (row_toggled_cb), (log_repaint):
